--- a/app/styles/06_components/_c-user-box-category.scss
+++ b/app/styles/06_components/_c-user-box-category.scss
@@ -3,8 +3,16 @@
 @use '../02_tools/mixins';
 
 .c-user-box-category{
+  display: grid;
+  grid-template-columns: repeat(1,1fr);
+
+  @include mixins.md(){
+   grid-template-columns: repeat(3,1fr);
+   gap:1rem;
+  }
+
   color:var(--white);
-  &__container{  
+   &__container{  
     overflow: hidden;
   border-radius: var(--border-radius);
   }
@@ -22,12 +30,13 @@
     bottom:1rem;
     background-color: var(--color-b);
     border-radius: var(--border-radius);
-    padding:var(--padding-box);
+    padding: 1rem 1.5rem;
 
 
-
+    @include mixins.md(){
+  min-height: 100%;
+    }
     &-first-line{
-      
       display: flex;
       justify-content: space-between;
       &-category{
@@ -39,6 +48,19 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+
+      & div{
+       
+      @include mixins.a-set(settings.$text-size-b);
+
+      }
+
+@include mixins.md(){
+  flex-direction: column;
+  align-items: flex-start;
+  gap:.5rem;
+  }
+
     }
   }
 }
