--- a/app/styles/06_components/_c-user-box-profile.scss
+++ b/app/styles/06_components/_c-user-box-profile.scss
@@ -5,7 +5,7 @@
   
   background-color: var(--color-b);
   border-radius:var(--border-radius);
-  width: 100%;
+  width: 25%;
 
   &__header{
     display:flex;
@@ -15,6 +15,12 @@
     width: 100%;
     padding:var(--padding-box);
     border-radius: var(--border-radius);
+
+    @include mixins.md{
+flex-direction: column;
+align-items: flex-start;
+padding-bottom: 48px;
+    }
     &-image{
       position:relative;
       width:70px;
@@ -43,6 +49,12 @@
     padding:1.5rem ;
     color:var(--white-soft);
     justify-content: space-between;
+
+ @include mixins.md{
+flex-direction: column;
+align-items: flex-start;
+gap:1rem;
+    }
 
      &-item.active {
        color:var(--white);
