--- a/app/styles/06_components/_c-user-box.scss
+++ b/app/styles/06_components/_c-user-box.scss
@@ -1,7 +1,15 @@
+@use "../02_tools/mixins";
+
 .c-user-box{
   &__container{
-    display:grid;
-    grid-template-columns:repeat(1,1fr);
-    gap:2rem;
+    display:flex;
+    flex-direction:column;
+    gap:1rem;
+
+    @include mixins.md{
+     flex-direction: row;
+     max-width: 90%;
+     margin:0 auto;
+    }
   }
 }
